--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h1>Latest Official News</h1>
+                <h1>Official News</h1>
                 <p><small>updated approx. every 5 minutes</small></p>
                     <!-- news_marker starts -->
 <ul>
