--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta http-equiv="cleartype" content="on">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" h />
         <meta name="msapplication-TileColor" content="#0088cc">
-        <meta name="keywords" content="morning, routine, good morning" />
-        <meta name="description" content="An automatically updated homepage for your morning routine"  />
+        <meta name="keywords" content="latest official chelsea news lo-fi" />
+        <meta name="description" content="An automatically updated lo-fi news feed"  />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
