--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<htmllang="en" manifest="cache.manifest">
     <head>
         <title>Fast Chelsea FC News</title>
         <meta http-equiv="Pragma" content="no-cache">
